# chat_room_rust_server

./: .env  CLAUDE.md  Cargo.toml  ENHANCEMENTS.md  README.md  bacon.toml  config.toml
.cargo/: config.toml
.claude/: settings.json
apps/main_server/: Cargo.toml
apps/main_server/src/: main.rs
libs/api/api-graphql/: Cargo.toml
libs/api/api-graphql/src/: handler.rs  lib.rs  schema.rs
libs/api/api-graphql/src/resolvers/: message_resolver.rs  mod.rs  room_resolver.rs  user_resolver.rs
libs/api/api-graphql/src/types/: error.rs  idempotency.rs  message.rs  mod.rs  pagination.rs  room.rs  user.rs
libs/api/api-rest/: Cargo.toml
libs/api/api-server/: Cargo.toml
libs/api/api-server/src/: lib.rs
libs/chat_room/: Cargo.toml
libs/chat_room/src/: chats.rs  lib.rs  rooms.rs  shared.rs  state.rs  users.rs
libs/chat_room/src/chats/: chats_resolver.rs  message.rs
libs/chat_room/src/rooms/: room.rs  rooms_resolver.rs
libs/chat_room/src/shared/: event_bus.rs  models.rs  subscription.rs
libs/chat_room/src/users/: user.rs  users_resolver.rs
libs/db/entity/: Cargo.toml
libs/db/entity/src/: message.rs  mod.rs  prelude.rs  room.rs  user.rs
libs/db/migration/: Cargo.toml
libs/db/migration/src/: lib.rs  m20251014_151108_create_room_table.rs  m20251017_202528_create_user_table.rs  m20251020_150040_create_message_table.rs  m20260217_000000_add_message_room_public_id_index.rs  m20260403_000000_add_user_name_unique_index.rs
libs/db/seeder/: Cargo.toml  README.md
libs/db/seeder/src/: lib.rs  main.rs  messages.rs  rooms.rs  users.rs
libs/domain/: Cargo.toml
libs/domain/src/: config.rs  constants.rs  events.rs  lib.rs  message.rs  pagination.rs  room.rs  user.rs
libs/entity/: Cargo.toml
libs/entity/src/: message.rs  room.rs  user.rs
libs/migration/: Cargo.toml
libs/migration/src/: lib.rs  m20251014_151108_create_room_table.rs  m20251017_202528_create_user_table.rs  m20251020_150040_create_message_table.rs  main.rs
libs/seeder/: Cargo.toml
libs/seeder/src/: lib.rs  message_seeder.rs  room_seeder.rs  user_seeder.rs
libs/server/: .env  Cargo.toml
libs/server/src/: handler.rs  lib.rs  schema.rs
libs/service/: Cargo.toml
libs/service/src/: cache.rs  event_bus.rs  lib.rs  message_service.rs  room_service.rs  user_service.rs
libs/service/src/mappers/: message_mapper.rs  mod.rs  room_mapper.rs  traits.rs  user_mapper.rs
