[package]
name = "chat_room"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = {version="7.0.17", features = ["uuid"]}
uuid = {version = "1.17.0", features = ["v4"]}
tokio = {version="1.42.0", features = ["full"]}
chrono = "0.4.41"
thiserror = "2.0.12"
futures-util = "0.3.31"
tokio-stream = {version="0.1.17", features = ["sync"]}
