[package]
name = "migration"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
# sea-orm = { version = "2.0.0-rc", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }


[dependencies.sea-orm-migration]
version = "2.0.0-rc"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-native-tls",  # `ASYNC_RUNTIME` feature
  "sqlx-sqlite",         # `DATABASE_DRIVER` feature
]