[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
chat_room = { path = "../chat_room" }
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
axum = "0.8.1"
axum-macros = "0.4.2"
tokio = {version="1.42.0", features = ["full"]}
uuid = {version = "1.17.0", features = ["v4"]}
