[package]
name = "api-graphql"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../../domain" }
service = { path = "../../service" }
async-graphql = { version = "7.0.17", features = ["uuid", "chrono"] }
async-graphql-axum = "7.0.17"
axum = "0.8.1"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
sea-orm = { version = "2.0.0-rc" }
tokio = { version = "1.42.0", features = ["full"] }
thiserror = "2.0.12"
tracing = "0.1"
futures-util = "0.3"
tokio-stream = "0.1"

